--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,7 @@
 
     <!-- Controllers -->
     <script src="js/controllers/mainCtrl.js"></script>
+    <script src="js/services/popUpService.js"></script>
 </head>
 <body ng-app="tipster">
 <ion-nav-view></ion-nav-view>
