All features except Notifications

--- a/www/index.html
+++ b/www/index.html
@@ -32,5 +32,12 @@
 </head>
 <body ng-app="tipster">
 <ion-nav-view></ion-nav-view>
+
+<!--<script>-->
+    <!--function PlaySound(soundObj) {-->
+        <!--var sound = document.getElementById(soundObj);-->
+        <!--sound.Play();-->
+    <!--}-->
+<!--</script>-->
 </body>
 </html>
